[tool.poetry]
name = "oop14_1"
version = "0.1.0"
description = ""
authors = [{ name = "irina456", email = "iradyachenko27@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
# Здесь могут быть зависимости вашего проекта

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.linters]
dependencies = [
  "isort = '^6.0.0'",
  "flake8 = '^7.1.2'",
  "mypy = '^1.15.0'",
  "black = '^25.1.0'"
]

[tool.poetry.group.testing]
dependencies = [
  "pytest = '^8.3.4'",
  "pytest-cov = '^6.0.0'",
]

[tool.mypy]
disallow_untyped_defs = false
no_implicit_optional = false
warn_return_any = true
warn_unreachable = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.gitignore
    | dist
  )/
)
'''

[tool.isort]
line_length = 119
skip_glob = ["docs/*"]
skip = [".gitignore", ".dockerignore"]